The chrome web store also needs a 128x128px icon

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
        "persistent": false
    },
    "icons": {
-   		"16": "icon.png"
+      "16": "icon-small.png",
+      "128": "icon.png"
    }
 
 }
